--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngx-rocket/ascii-logo": "^1.1.0",
     "chalk": "^2.4.1",
     "fs-extra": "^7.0.0",
+    "lodash.get": "^4.4.2",
     "minimist": "^1.2.0"
   },
   "devDependencies": {
