--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ngx-scripts": "./bin/ngx-scripts"
   },
   "scripts": {
-    "test": "eslint *.js",
+    "test": "xo",
     "postpublish": "git tag -a $npm_package_version -m \"$npm_package_version\" && git push --tags"
   },
   "keywords": [
@@ -30,19 +30,19 @@
   },
   "dependencies": {
     "@ngx-rocket/ascii-logo": "^1.1.0",
-    "chalk": "^2.4.1",
-    "fs-extra": "^7.0.0",
+    "chalk": "^2.4.2",
+    "fs-extra": "^7.0.1",
     "lodash.get": "^4.4.2",
     "minimist": "^1.2.0"
   },
   "devDependencies": {
-    "eslint": "^5.5.0",
-    "eslint-config-xo-space": "^0.20.0"
+    "xo": "^0.24.0"
   },
   "engines": {
     "node": ">=6.0.0"
   },
-  "eslintConfig": {
-    "extends": "xo-space/esnext"
+  "xo": {
+    "space": true,
+    "prettier": true
   }
 }
