--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "xo \"*.js\" \"bin/*.js\"",
     "lint:fix": "npm run lint -s -- --fix",
     "test": "npm run lint -s",
-    "postpublish": "git tag -a $npm_package_version -m \"$npm_package_version\" && git push --tags"
+    "release:check": "npm run release -s -- --dry-run"
   },
   "keywords": [
     "ngx",
@@ -24,7 +24,10 @@
     "scripts",
     "project"
   ],
-  "author": "Yohan Lasorsa",
+  "author": {
+    "name": "Yohan Lasorsa",
+    "url": "https://twitter.com/sinedied"
+  },
   "license": "MIT",
   "homepage": "https://github.com/ngx-rocket/scripts",
   "bugs": {
@@ -35,9 +38,10 @@
     "chalk": "^4.1.0",
     "fs-extra": "^9.0.1",
     "lodash.get": "^4.4.2",
-    "minimist": "^1.2.5",
+    "minimist": "^1.2.5"
   },
   "devDependencies": {
+    "semantic-release-npm-github": "^1.0.4",
     "xo": "^0.37.1"
   },
   "engines": {
