chore: fix release test script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "xo \"*.js\" \"bin/*.js\"",
     "lint:fix": "npm run lint -s -- --fix",
     "test": "npm run lint -s",
-    "release:check": "npm run release -s -- --dry-run"
+    "release:check": "semantic-release --dry-run"
   },
   "keywords": [
     "ngx",
