--- a/package.json
+++ b/package.json
@@ -36,22 +36,24 @@
   "dependencies": {
     "@ngx-rocket/ascii-logo": "^1.1.0",
     "chalk": "^4.1.0",
-    "fs-extra": "^9.0.1",
+    "fs-extra": "^10.0.0",
     "lodash.get": "^4.4.2",
     "minimist": "^1.2.5"
   },
   "devDependencies": {
     "semantic-release-npm-github": "^1.0.4",
-    "xo": "^0.37.1"
+    "xo": "^0.42.0"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=12.14.1"
   },
   "xo": {
     "space": true,
     "prettier": true,
     "rules": {
-      "unicorn/no-array-reduce": "off"
+      "unicorn/no-array-reduce": "off",
+      "unicorn/prefer-module": "off",
+      "unicorn/no-array-for-each": "off"
     }
   },
   "release": {
